Fixed font-size on mobile device screens.

--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,10 @@ header .tagline{
   }
 
   .logo {
-    text-align: center !important;
+    text-align: center;
     width: 100%;
     margin-left: 0 !important;
+    font-size: 4rem !important;
   }
 
   main {
